--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -33,6 +33,14 @@ $color-value in $colors {
     text-decoration: underline;
 }
 
+.text--italic {
+    font-style: italic;
+}
+
+.text--700 {
+    font-weight: 700;
+}
+
 .mx-1 {
     margin-left: 1rem;
     margin-right: 1rem;
@@ -74,4 +82,12 @@ $color-value in $colors {
     @media screen and (min-width: 1024px) {
         text-align: center !important;
     }
+}
+
+.grid-rows-3 {
+    grid-template-rows: repeat(3, minmax(0, max-content));
+}
+
+.row-span-2 {
+    grid-row: span 2 / span 2;
 }
