✨ Add Special Elite font

--- a/src/styles/settings/_fonts.scss
+++ b/src/styles/settings/_fonts.scss
@@ -136,6 +136,13 @@ font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
 
 */
 
+// Special Elite
+@font-face {
+    font-family:  'Special Elite', cursive;
+    src: url("/assets/fonts/SpecialElite-Regular.ttf");
+    font-weight: 400;
+}
+
 // Inter
 @font-face {
     font-family: Inter;
