--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -192,13 +192,16 @@ import Layout from "../layouts/Layout.astro";
     <div class="alpd-academy__persistently-low-alp-container">
         <div class="red-string persistently-low-red-string"></div>
         <img class="persistently-low-pin" src="/assets/images/alpd-academy/red-pin.png" alt="">
+        <div class="mobile--backgroud"></div>
         <div class="alpd-academy__persistently-low-alp-content">
-            <p>
+           <div class="wrapper">
+            <p class="font--special-elite">
                 Patients with persistently low alkaline phosphatase (ALP) can experience debilitating hypophosphatasia symptoms that may progress, and wide-ranging systemic complications.<sup>1-4, 15</sup>
             </p>
-            <p class="color--red">
+            <p class="font--special-elite color--red">
                 Persistently low ALP can be defined as 2 or more age- and sex-adjusted ALP levels below normal range in intervals of more than 30 days.<sup>5,16,17</sup>
             </p>
+           </div>
         </div>
     </div>
   </section>
