--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -91,3 +91,7 @@ $color-value in $colors {
 .row-span-2 {
     grid-row: span 2 / span 2;
 }
+
+.font--special-elite {
+    font-family: 'Special Elite', cursive;
+}
