--- a/src/styles/settings/_fonts.scss
+++ b/src/styles/settings/_fonts.scss
@@ -138,7 +138,7 @@ font-display:auto;font-style:normal;font-weight:400;font-stretch:normal;
 
 // Special Elite
 @font-face {
-    font-family:  'Special Elite', cursive;
+    font-family: 'Special Elite';
     src: url("/assets/fonts/SpecialElite-Regular.ttf");
     font-weight: 400;
 }
@@ -244,7 +244,7 @@ p {
 }
 
 h1 {
-    font-family: "oswald",sans-serif;
+    font-family: "oswald", sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
     line-height: 30px;
@@ -256,7 +256,7 @@ h1 {
 }
 
 h2 {
-    font-family: "veneer",sans-serif;
+    font-family: "veneer", sans-serif;
     font-size: 1.875rem;
     font-weight: 400;
     line-height: 33px;
