--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -374,6 +374,8 @@
 
     padding: 2rem 0;
 
+    margin-bottom: 1.5rem;
+
     .alpd-academy__call-out-text {
         line-height: 22.4px;
         font-weight: 600;
@@ -382,17 +384,56 @@
 }
 
 .alpd-academy__persistently-low-alp-container {
+    position: relative;
+
+    .mobile--backgroud {
+        position: absolute;
+        top: 0;
+        right: 50%;
+        width: calc(100% + 20rem);
+        height: 100%;
+
+        z-index: 0;
+
+        background-color: $color-floral-white;
+        transform: rotate(-2.56deg) translateX(50%);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    padding: 2rem 0;
 
     .persistently-low-red-string {
+        position: absolute;
+        width: calc(100vw + 20rem);
 
+        top: 0px;
+
+        z-index: 2;
+        left: 50%;
+        transform: translateX(-50%) rotate(8deg);
     }
 
     .persistently-low-pin {
+        position: absolute;
+        width: 30px;
 
+        z-index: 2;
+
+        top: -30px;
+
+        left: 50%;
+        transform: translateX(-50%);
     }
 
     .alpd-academy__persistently-low-alp-content {
-        
+
+        p {
+            line-height: 22.4px;
+
+            &:not(:last-of-type) {
+                margin-bottom: 1rem;
+            }
+        }
     }
 }
 
