cta component created

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,6 +55,6 @@ import CTA from "../components/CTA.astro";
   </section>
 
 
-  <CTA pageName="identifying-hpp" text="Read the full file on hypophosphatasia" buttonDescription="HPP Profile" link="#"/>
+  <CTA pageName="hpp-profile" text="Don’t let hypophosphatasia stay hidden" buttonDescription="HPP Profile" link="#"/>
   <References />
 </Layout>
