--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -1,5 +1,6 @@
 .cta{
-
+    padding-top: 8.7462rem;
+    padding-bottom: 10.5175rem;
     p{
         color: $color-white;
     }
@@ -10,8 +11,6 @@
         
     }
     .alpd-academy{
-        padding-top: 8.7462rem;
-        padding-bottom: 10.5175rem;
         text-align: center;
         position: relative;
 
@@ -83,8 +82,7 @@
         background-position: center;
         height: 18rem;
         position: relative;
-        padding-top: 8.7462rem;
-        padding-bottom: 10.5175rem;
+        
 
         a{
             margin: auto;
@@ -135,52 +133,69 @@
         }
 
         .cta__text{
-            margin-top: 3rem;
+            font-family: 'Oswald';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 24px;
+            line-height: 1.875rem;
+            text-transform: uppercase;
+            width: 14.875rem;
+            margin: auto;
+            margin-top: 2rem;
+            margin-bottom: 1.0325rem;
             @media screen and (min-width:665px) {
-                padding-top: 16rem;
+                padding-top: 15rem;
+                width: 616px;
+                font-size: 3rem;
+                line-height: 3.75rem;
+                text-align: center;
+                letter-spacing: -0.03em;
             }
         }
 
+        .red-string{
         &.mod-1{
-            display: none;
-            @media screen and (min-width:768px) {
-                display: block;
-                position: absolute;
-                color: red;
-                width: 100vw;
-                top: -68px;
+            position: absolute;
+            color: red;
+            width: 100vw;
+            top: 52px;
+            left: 0;
+            transform: rotate(356deg);
+            @media screen and (min-width:665px) {
+                top: 117px;
                 left: 0;
                 transform: rotate(356deg);
             }
         }
 
         &.mod-2{
-            display: none;
-            @media screen and (min-width:768px) {
-                display: block;
-                position: absolute;
-                color: red;
-                width: 100vw;
-                top: -54px;
-                left: 0;
-                transform: rotate(360deg);
-            }
-            @media screen and (min-width:1700px) {
-                transform: rotate(359deg);
-                top: -42px;
+            position: absolute;
+            color: red;
+            width: 100vw;
+            bottom: 235px;
+            transform: rotate(371deg);
+            @media screen and (min-width:665px) {
+                top: 178px;
+                bottom: unset;
+                transform: rotate(367deg)
             }
         }
 
         &.mod-3{
-            display: none;
-            @media screen and (min-width:768px) {
-                display: block;
-                position: absolute;
-                color: blue;
+            position: absolute;
+            color: red;
+            width: 100vw;
+            bottom: 41px;
+            transform: rotate(354deg);
+            @media screen and (min-width:665px) {
                 width: 100vw;
-                bottom: -64px;
-                transform: rotate(357deg);
+                bottom: 171px;
+                transform: rotate(352deg)
             }
-        }   
+            @media screen and (min-width:2100px) {
+            transform: rotate(354deg);
+            }
+        }  
+    } 
     }
 }
