--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -159,23 +159,6 @@
 
 /* HPP Profile Page */
 .hpp__profile {
-    
-    .profiling-hypophostasia {
-        /* max-width: 50%;
-        margin: auto;
-
-        @media screen and (max-width: 768px) {
-            max-width: 100%;
-        }
-
-        @media screen and (min-width: 768px) and (max-width: 1024px) {
-            max-width: 70%;
-        }
-
-        @media screen and (min-width: 1024px) and (max-width: 1200px) {
-            max-width: 60%;
-        } */
-    }
 
     &__content {
         margin-bottom: 2rem;
@@ -261,16 +244,18 @@
             background-position: center;
             
             font-size: 1rem;
+            font-family: 'Special Elite', cursive;;
+            font-weight: 400;
                
             @media screen and (max-width: 768px) {  
                 background-image: url(/assets/images/sticky-card.png);
                 color: $color-black;
                 z-index: 2;
-                margin: -2rem 0 0 0;
+                margin: 0;
             }
 
             @media screen and (max-width: 495px) { 
-                padding: 6rem;
+                padding: 5rem;
             }
 
             @media screen and (min-width: 496px) and (max-width: 600px) { 
@@ -352,3 +337,4 @@
         }
     }
 }
+/* HPP Profile page end */
