--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,6 +55,7 @@ import CTA from "../components/CTA.astro";
   </section>
 
 
-  <CTA pageName="hpp-profile" text="Don’t let hypophosphatasia stay hidden" buttonDescription="HPP Profile" link="#"/>
+  <CTA variation="variant-3" text="Don’t let hypophosphatasia stay hidden" buttonLabel="HPP Profile" link="#" />
+
   <References />
 </Layout> 
