✨ menacing mutations section

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -121,7 +121,7 @@ import Layout from "../layouts/Layout.astro";
         </ul>
     </div>
     <article class="alpd-academy__deficient">
-        <div class="alpd-academy__deficient-content">
+        <div class="alpd-academy__deficient-wrapper">
             <div class="wrapper">
                 <picture class="alpd-academy__deficient-pic">
                     <source srcset="/assets/images/alpd-academy/k-deficient-desktop.png" media="(min-width: 1024px)">
@@ -133,7 +133,7 @@ import Layout from "../layouts/Layout.astro";
                 </picture>
             </div>
 
-            <div class="alpd-academy__deficient-content">
+            <div class="alpd-academy__deficient-content md:mb-2">
                 <div class="wrapper">
                     <h4 class="alpd-academy__deficient-paragraph-title">
                         Deficient alkaline phosphatase in bone and teeth
@@ -151,7 +151,7 @@ import Layout from "../layouts/Layout.astro";
             </div>
 
             <div class="wrapper">
-                <picture class="alpd-academy__deficient-pic">
+                <picture class="alpd-academy__deficient-pic md:mb-1">
                     <source srcset="/assets/images/alpd-academy/k-neurlogic-desktop.png" media="(min-width: 1024px)">
                     <source srcset="/assets/images/alpd-academy/k-neurlogic-tablet.png" media="(min-width: 500px)">
                     <img src="/assets/images/alpd-academy/k-neurlogic-mobile.png" alt="">
@@ -160,7 +160,7 @@ import Layout from "../layouts/Layout.astro";
                         </figcaption>
                 </picture>
             </div>
-            <div class="alpd-academy__deficient-content">
+            <div class="alpd-academy__deficient-content last">
                 <div class="wrapper">
                     <h4 class="alpd-academy__deficient-paragraph-title">
                         Deficient alkaline phosphatase in the central nervous system (CNS)
@@ -171,11 +171,11 @@ import Layout from "../layouts/Layout.astro";
                     <p class="alpd-academy__deficient-paragraph">
                         Though the direct cause is unknown, hypophosphatasia is also associated with other neurologic symptoms in pediatrics and adults, like:<sup>8,12</sup>
                     </p>
-                    <ul class="alpd-academy__symptoms-list grid-rows-3">
+                    <ul class="alpd-academy__symptoms-list grid-rows-3 alpd-academy__symptoms-list--underlined">
                         <li>fatigue</li>
                         <li>vertigo</li>
                         <li>headaches</li>
-                        <li class="row-span-2">mood (depression, anxiety)</li>
+                        <li class="row-span-2">mood <span class="md:text--18px md:block">(depression, anxiety)</span></li>
                         <li>sleep disturbance</li>
                     </ul>
                 </div>
