--- a/src/styles/settings/_utils.scss
+++ b/src/styles/settings/_utils.scss
@@ -19,6 +19,16 @@ $color-value in $colors {
     margin-bottom: 0 !important;
 }
 
+.md\:mb-2 {
+    @media screen and (min-width: 768px) {
+       margin-bottom: 2rem !important;
+    }
+}
+
+.md\:mb-1 {
+    margin-bottom: 1rem !important;
+}
+
 .lg\:mb-1 {
     margin-bottom: 1rem !important;
 }
@@ -39,6 +49,10 @@ $color-value in $colors {
 
 .text--700 {
     font-weight: 700;
+}
+
+.md\:text--18px {
+    font-size: 1.125rem;
 }
 
 .mx-1 {
@@ -78,6 +92,12 @@ $color-value in $colors {
     }
 }
 
+.md\:block {
+    @media screen and (min-width: 768px) {
+        display: block;
+    }
+}
+
 .lg\:text--center {
     @media screen and (min-width: 1024px) {
         text-align: center !important;
@@ -90,6 +110,10 @@ $color-value in $colors {
 
 .row-span-2 {
     grid-row: span 2 / span 2;
+}
+
+.md\:row-span-1 {
+    grid-row: span 1 / span 1;
 }
 
 .font--special-elite {
