update for variant-3

--- a/src/styles/components/_cta.scss
+++ b/src/styles/components/_cta.scss
@@ -199,6 +199,9 @@
             @media screen and (min-width:2100px) {
             transform: rotate(354deg);
             }
+            @media screen and (min-width:2350px) {
+                transform: rotate(356deg)
+            }
         }  
     } 
     }
