--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ import CTA from "../components/CTA.astro";
   </section>
 
 
-  <CTA variation="variant-3" content="Don’t let hypophosphatasia stay hidden" buttonLabel="HPP Profile" linkURL="#"/>
+  <CTA variation="variant-2" content="Don’t let hypophosphatasia stay hidden" buttonLabel="HPP Profile" linkURL="#" bypassModal/>
 
   <References />
 </Layout> 
