✨ Add know the numbers

--- a/src/pages/alpd-academy.astro
+++ b/src/pages/alpd-academy.astro
@@ -192,7 +192,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="alpd-academy__persistently-low-alp-container">
         <div class="red-string persistently-low-red-string"></div>
         <img class="persistently-low-pin" src="/assets/images/alpd-academy/red-pin.png" alt="">
-        <div class="mobile--backgroud"></div>
+        <div class="backgroud"></div>
         <div class="alpd-academy__persistently-low-alp-content">
            <div class="wrapper">
             <p class="font--special-elite">
@@ -205,5 +205,46 @@ import Layout from "../layouts/Layout.astro";
         </div>
     </div>
   </section>
+  <section class="section alpd-academy__know-the-numbers">
+    <div class="wrapper">
+        <h1 class="know-the-numbers__title">
+            know the numbers
+        </h1>
+    </div>
 
+    <div class="numbers__info">
+        <div class="wrapper">
+            <div class="number__kpi">
+                <h4 class="number__kpi-title">Adults</h4>
+                <div class="number__kpi-data">
+                    <picture>
+                        <img src="/assets/images/alpd-academy/finger-print.png" alt="">
+                    </picture>
+                    <p class="number__kpi-legend">
+                        &#60;40 U/L <sup>*</sup>
+                    </p>
+                </div>
+                <p class="number__kpi-description">
+                    <span class="color--saffron-mango">is considered LOW in <span class="color--buff">adults</span></span>
+                    <br><br>
+                    <sup>*</sup>Limitations: An alkaline phosphatase level of below 40 U/L is not conclusive for a diagnosis of hypophosphatasia. Patient should be evaluated for other symptoms of hypophosphatasia and differential diagnoses should be ruled out. Check with your lab for their appropriate age- and sex-adjusted reference ranges.<sup>18-22</sup>
+                </p>
+            </div>
+            <div class="number__kpi">
+                <h4 class="number__kpi-title">Children</h4>
+                <div class="number__kpi-data">
+                    <picture>
+                        <img src="/assets/images/alpd-academy/finger-print.png" alt="">
+                    </picture>
+                    <p class="number__kpi-legend">
+                       VARIES
+                    </p>
+                </div>
+                <p class="number__kpi-description">
+                    <span class="color--saffron-mango">In children, what’s considered “low alkaline phosphatase” is variable</span> because alkaline phosphatase reference values are highly dependent on age and sex. Ensure that lab results for alkaline phosphatase levels reflect age- and sex-adjusted reference ranges for the specific patient.<sup>1,23,24</sup>
+                </p>
+            </div>
+        </div>
+    </div>
+  </section>
 </Layout>
