--- a/src/styles/settings/_variables.scss
+++ b/src/styles/settings/_variables.scss
@@ -17,7 +17,8 @@ $colors: (
     "white": #FFFFFF,
     "cinnabar": #E93C2B,
     "floral-white": #FFFAED,
-    "saffron-mango": #F8BA5D
+    "saffron-mango": #F8BA5D,
+    "buff": #F3CC86
 );
 
 $color-folder: map-get($colors, "folder");
@@ -34,3 +35,4 @@ $color-white: map-get($colors, "white");
 $color-cinnabar: map-get($colors, "cinnabar");
 $color-floral-white: map-get($colors, "floral-white");
 $color-saffron-mango: map-get($colors, "saffron-mango");
+$color-buff: map-get($colors, "buff");
