--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -362,6 +362,7 @@
 
         @media screen and (min-width: 1024px) {
             background-image: none;
+            padding-bottom: 0;
         }
     
         .alpd-academy__deficient-wrapper {
@@ -576,13 +577,53 @@
         line-height: 22.4px;
         font-weight: 600;
         text-align: center;
+
+        @media screen and (min-width: 850px) {
+            font-size: 18px;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 2.5rem;
+    }
+
+    @media screen and (min-width: 850px) {
+        background-image: url("/assets/images/alpd-academy/call-out-bg-desktop.png");
+        max-width: 35.4375rem;
+        margin-left: auto;
+        margin-right: auto;
+
+        margin-bottom: 0.1rem;
+
+        .wrapper {
+            max-width: 32.125rem;
+        }
+    }
+
+    @media screen and (min-width: 1024px) {
+        margin-top: -2rem;
+        position: relative;
+        z-index: 0;
+        padding: 4rem 0;
     }
 }
 
 .alpd-academy__persistently-low-alp-container {
     position: relative;
+    margin-bottom: 3rem;
 
-    .mobile--backgroud {
+    @media screen and (min-width: 850px) {
+       max-width: 47.3125rem;
+       margin-left: auto;
+       margin-right: auto;
+       padding: 6rem 0;
+
+       .wrapper {
+        max-width: 39.875rem;
+       }
+    }
+
+    .backgroud {
         position: absolute;
         top: 0;
         right: 50%;
@@ -594,6 +635,12 @@
         background-color: $color-floral-white;
         transform: rotate(-2.56deg) translateX(50%);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+        @media screen and (min-width: 850px) {
+            transform: none;
+            right: initial;
+            width: 100%;
+        }
     }
 
     padding: 2rem 0;
@@ -607,6 +654,11 @@
         z-index: 2;
         left: 50%;
         transform: translateX(-50%) rotate(8deg);
+
+        @media screen and (min-width: 850px) {
+            top: 44px;
+            transform: translateX(-50%) rotate(5deg);
+        }
     }
 
     .persistently-low-pin {
@@ -619,6 +671,10 @@
 
         left: 50%;
         transform: translateX(-50%);
+
+        @media screen and (min-width: 850px) {
+            width: 50px;
+        }
     }
 
     .alpd-academy__persistently-low-alp-content {
@@ -628,6 +684,88 @@
 
             &:not(:last-of-type) {
                 margin-bottom: 1rem;
+            }
+
+            @media screen and (min-width: 850px) {
+                font-size: 1.25rem;
+                line-height: 30px;
+            }
+        }
+    }
+}
+
+.alpd-academy__know-the-numbers {
+
+    .know-the-numbers__title {
+        color: $color-white;
+        text-transform: uppercase;
+        margin-bottom: 2rem;
+
+        @media screen and (min-width: 425px) {
+            text-align: center;
+        }
+    }
+
+    .numbers__info {
+        margin-bottom: 2rem;
+
+        picture, img {
+            height: 100%;
+            width: auto;
+            margin: 0 auto;
+        }
+
+        @media screen and (min-width: 850px) {
+            .wrapper {
+                display: flex;
+                @include flex-gap(2rem)
+            }
+        }
+
+        .number__kpi {
+            text-align: center;
+
+            &:not(:last-of-type) {
+                margin-bottom: 3rem;
+
+                .number__kpi-description {
+                    margin-top: -1.75rem;
+                }
+            }
+
+            @media screen and (min-width: 425px) {
+                max-width: 25.375rem;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+            .number__kpi-title {
+                color: $color-white;
+                font-weight: 600;
+                font-size: 1.125rem;
+                line-height: 25.2px;
+            }
+
+            .number__kpi-data {
+                height: 9.25rem;
+                position: relative;
+            }
+
+            .number__kpi-legend {
+                position: absolute;
+                left: 0;
+                width: 100%;
+                top: 50%;
+                transform: translateY(-50%);
+
+                font-family: "veneer", sans-serif;
+                font-weight: 400;
+                font-size: 4.5rem;
+                color: $color-red;
+            }
+
+            .number__kpi-description {
+                color: $color-white;
             }
         }
     }
